// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ProgressiveImage > lazy load placeholder images 1`] = `
<div
  class="v-progressive-image v-progressive-image-loading"
>
  <div
    style="padding-bottom: 56.25%;"
  >
    <transition-stub
      appear="true"
      css="false"
      name="v-progressive-image-main-fade"
      persisted="false"
    >
      <!--v-if-->
    </transition-stub>
    <transition-stub
      appear="true"
      css="true"
      name="v-progressive-image-placeholder-fade"
      persisted="false"
    >
      <img
        class="v-progressive-image-placeholder"
        loading="lazy"
        src="placeholder-image.jpg"
      />
    </transition-stub>
    <!--v-if-->
  </div>
</div>
`;

exports[`ProgressiveImage > render default slot 1`] = `
<div
  class="v-progressive-image v-progressive-image-loading"
>
  <div
    style="padding-bottom: 56.25%;"
  >
    <transition-stub
      appear="true"
      css="true"
      name="v-progressive-image-main-fade"
      persisted="false"
    >
      <!--v-if-->
    </transition-stub>
    <!--v-if-->
    <div
      class="v-progressive-image-slot-default"
    >
      
      <div>
        lorem ipsum
      </div>
      
    </div>
  </div>
</div>
`;

exports[`ProgressiveImage > render default slot props 1`] = `
<div
  class="v-progressive-image v-progressive-image-loading"
>
  <div
    style="padding-bottom: 56.25%;"
  >
    <transition-stub
      appear="true"
      css="true"
      name="v-progressive-image-main-fade"
      persisted="false"
    >
      <!--v-if-->
    </transition-stub>
    <!--v-if-->
    <div
      class="v-progressive-image-slot-default"
    >
      
      {
  "isLoading": true
}
      
    </div>
  </div>
</div>
`;

exports[`ProgressiveImage > render image 1`] = `
<div
  class="v-progressive-image v-progressive-image-loading"
>
  <div
    style="padding-bottom: 56.25%;"
  >
    <transition-stub
      appear="true"
      css="true"
      name="v-progressive-image-main-fade"
      persisted="false"
    >
      <!--v-if-->
    </transition-stub>
    <!--v-if-->
    <!--v-if-->
  </div>
</div>
`;

exports[`ProgressiveImage > render title attributes 1`] = `
<div
  class="v-progressive-image v-progressive-image-loading"
>
  <div
    style="padding-bottom: 56.25%;"
  >
    <transition-stub
      appear="true"
      css="true"
      name="v-progressive-image-main-fade"
      persisted="false"
    >
      <!--v-if-->
    </transition-stub>
    <!--v-if-->
    <!--v-if-->
  </div>
</div>
`;

exports[`ProgressiveImage > use alt attribute 1`] = `
<div
  class="v-progressive-image v-progressive-image-loading"
>
  <div
    style="padding-bottom: 56.25%;"
  >
    <transition-stub
      appear="true"
      css="false"
      name="v-progressive-image-main-fade"
      persisted="false"
    >
      <!--v-if-->
    </transition-stub>
    <transition-stub
      appear="true"
      css="true"
      name="v-progressive-image-placeholder-fade"
      persisted="false"
    >
      <img
        class="v-progressive-image-placeholder"
        loading="eager"
        src="placeholder-image.jpg"
      />
    </transition-stub>
    <!--v-if-->
  </div>
</div>
`;

exports[`ProgressiveImage > use custom blur 1`] = `
<div
  class="v-progressive-image v-progressive-image-loading"
>
  <div
    style="padding-bottom: 56.25%;"
  >
    <transition-stub
      appear="true"
      css="false"
      name="v-progressive-image-main-fade"
      persisted="false"
    >
      <!--v-if-->
    </transition-stub>
    <transition-stub
      appear="true"
      css="true"
      name="v-progressive-image-placeholder-fade"
      persisted="false"
    >
      <img
        class="v-progressive-image-placeholder"
        loading="eager"
        src="placeholder-image.jpg"
      />
    </transition-stub>
    <!--v-if-->
  </div>
</div>
`;

exports[`ProgressiveImage > use object cover 1`] = `
<div
  class="v-progressive-image v-progressive-image-object-cover v-progressive-image-loading"
>
  <div
    style="padding-bottom: 56.25%;"
  >
    <transition-stub
      appear="true"
      css="false"
      name="v-progressive-image-main-fade"
      persisted="false"
    >
      <!--v-if-->
    </transition-stub>
    <transition-stub
      appear="true"
      css="true"
      name="v-progressive-image-placeholder-fade"
      persisted="false"
    >
      <img
        class="v-progressive-image-placeholder"
        loading="eager"
        src="placeholder-image.jpg"
      />
    </transition-stub>
    <!--v-if-->
  </div>
</div>
`;
